tests/macros/plugin/choices.stderr
error: option `choices` does not exist for kind `plugin`
 --> $DIR/choices.rs:2:36
  |
2 |     requestty::questions![Plugin { choices: todo!() }];
  |                                    ^^^^^^^
