tests/macros/plugin/choices.rs
fn main() {
    requestty::questions![Plugin { choices: todo!() }];
}
